--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
   "dependencies": {
     "gatsby": "^4.15.0",
     "gatsby-plugin-gatsby-cloud": "^4.15.0",
-    "gatsby-plugin-image": "^2.15.0",
+    "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.15.0",
     "gatsby-plugin-offline": "^5.15.0",
     "gatsby-plugin-react-helmet": "^5.15.0",
-    "gatsby-plugin-sharp": "^4.15.0",
+    "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
